feat: add app store links and update deployment config for production

--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -17,10 +17,10 @@ const aboutBgUrl = `url('${baseUrl}/images/about_bg.webp')`;
 			
 			<div class="app-showcase">
 				<div class="download-buttons">
-					<a href="#">
+					<a href="https://play.google.com/store/apps/details?id=ar.gob.escobar.ciudadana" target="_blank">
 						<img src={`${import.meta.env.BASE_URL}/vectors/google_play_badge.svg`} alt="Google Play" class="store-badge">
 					</a>
-					<a href="#">
+					<a href="https://apps.apple.com/ar/app/escobar-360/id6745799193" target="_blank">
 						<img src={`${import.meta.env.BASE_URL}/vectors/apple_badge.svg`} alt="App Store" class="store-badge">
 					</a>
 				</div>
