--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -17,10 +17,10 @@ const baseUrl = import.meta.env.BASE_URL;
 					<p class="small-text">En Google Play o App Store.</p>
 				</div>
 				<div class="app-buttons">
-					<a href="#" class="app-button">
+					<a href="https://play.google.com/store/apps/details?id=ar.gob.escobar.ciudadana" class="app-button" target="_blank">
 						<img src={`${import.meta.env.BASE_URL}/vectors/google_play_badge.svg`} alt="Google Play" class="store-badge">
 					</a>
-					<a href="#" class="app-button">
+					<a href="https://apps.apple.com/ar/app/escobar-360/id6745799193" class="app-button" target="_blank">
 						<img src={`${import.meta.env.BASE_URL}/vectors/apple_badge.svg`} alt="App Store" class="store-badge">
 					</a>
 				</div>
